fix scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,7 @@ html {
 .MuiBackdrop-root{
   z-index: 10 !important;
 }
+
+.MuiCard-root{
+  overflow-y: scroll !important;
+}
